k8s/deploy.yml
# ----- api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: prod
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: gcr.io/isv-294607/web:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 200m
          imagePullPolicy: Always
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: prod
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: gcr.io/isv-294607/api:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 200m
          imagePullPolicy: Always
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: web-service
#   namespace: prod
#   annotations:
#     cloud.google.com/neg: '{"ingress": true}'
#     cloud.google.com/backend-config: '{"ports": {"80":"app-cdn"}}'
# spec:
#   selector:
#     app: web
#   ports:
#     - port: 80
#       protocol: TCP
#       targetPort: 8080
#
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: api-service
#   namespace: prod
#   annotations:
#     cloud.google.com/neg: '{"ingress": true}'
# spec:
#   selector:
#     app: api
#   ports:
#     - port: 80
#       protocol: TCP
#       targetPort: 8000
